--- a/XML/XML/XML.csproj
+++ b/XML/XML/XML.csproj
@@ -44,20 +44,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\XmlModel.cs" />
-    <Compile Include="Presenter\XmlPresenter.cs" />
     <Compile Include="Tools\ErrorExceptions.cs" />
     <Compile Include="FileManager.cs" />
     <Compile Include="InspectionForm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\IView.cs" />
-    <Compile Include="Views\XmlView.cs" />
     <Compile Include="XmlBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="WKFC  Inspection format with data elements.doc" />
+    <None Include="BIADDENDUM.doc" />
+    <None Include="GLRecLetter.doc" />
+    <None Include="imbuildersriskdataelements.doc" />
+    <None Include="OPERATIONSADDENDUM.doc" />
+    <None Include="PropertyRecLetter.doc" />
+    <None Include="RECCHECKINSPECTIONFORM.docx" />
+    <None Include="WindAddendum.docx" />
+    <None Include="WKFCInspectionformat.doc" />
   </ItemGroup>
   <ItemGroup>
     <COMReference Include="Microsoft.Office.Core">
@@ -93,6 +96,7 @@
     <Content Include="Inspection2.xml">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Inspection3.xml" />
     <Content Include="TODO.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
