XmlBuilder.Cs redesigned
switched from an xmldocument to an xmlreader.
currently can be thrown off if an open and close element with no value
exist. Need to add xmlconverting for invalid characters, for now invalid
characters will break program

--- a/XML/XML/XML.csproj
+++ b/XML/XML/XML.csproj
@@ -52,7 +52,6 @@
     <Compile Include="XmlBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="BIADDENDUM.doc" />
     <None Include="GLRecLetter.doc" />
     <None Include="imbuildersriskdataelements.doc" />
@@ -97,6 +96,7 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Inspection3.xml" />
+    <Content Include="Inspection4.xml" />
     <Content Include="TODO.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
